1. Optimized File walk 2. Added missing testcase for delete file